--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,9 @@
         <activity android:name=".TerceraPantalla">
         </activity>
 
+        <activity android:name=".PantallaResumen">
+        </activity>
+
     </application>
 
 
